# opencv-onnx-ocr

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  main.cpp
